# quill-code

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  unit_test.db
.cargo/: config.toml
.cargo/patches/: llama-cpp-2-Cargo.toml
.cargo/patches/llama-cpp-2/: .cargo_vcs_info.json
.cargo/patches/llama-cpp-2/src/: model.rs
cats/: cat.py  test_cat.py
crates/openai-agents-tracing-rust/: Cargo.toml  README.md
crates/openai-agents-tracing-rust/src/: client.rs  facade.rs  lib.rs  tracing.rs  types.rs
crates/openai-agents-tracing-rust/tests/: e2e_tracing.rs
src/: lib.rs  main.rs
src/config/: mod.rs
src/domain/: agent_mode.rs  mod.rs  project.rs  todo.rs  user_settings.rs
src/domain/bt/: general.rs  mod.rs
src/domain/permissions/: checker.rs  mod.rs  store.rs  types.rs
src/domain/plan/: mod.rs  service.rs
src/domain/prompting/: general.rs  mod.rs  session.rs  tools.rs  user.rs
src/domain/session/: mod.rs  request.rs  service.rs  session.rs  session_request.rs  todo_list.rs
src/domain/startup/: mod.rs  service.rs
src/domain/tools/: discover_objects.rs  find_files.rs  finish.rs  list_objects.rs  mod.rs  patch_file.rs  patch_files.rs  read_objects.rs  shell_exec.rs  structure.rs  update_todo_list.rs  web_search.rs
src/domain/tools/change/: insert.rs  mod.rs  remove.rs  replace.rs
src/domain/tools/utils/: mod.rs
src/domain/workflow/: chain.rs  events.rs  mod.rs  step.rs  tool_runner.rs  toolset.rs  workflow.rs
src/domain/workflow/toolset/: all.rs  all_no_todo.rs  discover.rs  edit.rs  finishing_all.rs  finishing_all_no_todo.rs  finishing_discover.rs  mod.rs  none.rs  read.rs
src/domain/workflow/toolsets/: general.rs  mod.rs
src/infrastructure/: app_bus.rs  app_controller.rs  db.rs  event_bus.rs  event_controller.rs  inference.rs  init.rs  mod.rs  model_registry.rs
src/infrastructure/api_clients/: mod.rs
src/infrastructure/api_clients/openai/: client.rs  mod.rs  translator.rs
src/infrastructure/api_clients/openai/dto/: mod.rs  request.rs  response.rs
src/infrastructure/auth/: mod.rs  oauth.rs
src/infrastructure/cli/: clipboard.rs  controls.rs  loading_bar.rs  mod.rs  repl.rs  state.rs  theme.rs
src/infrastructure/cli/actions/: change_settings.rs  insert_openai_key.rs  mod.rs  oauth_login.rs  select_openai_model.rs
src/infrastructure/cli/components/: attachment_indicator.rs  bottom_info_panel.rs  commands_menu.rs  file_changes.rs  header_panel.rs  input.rs  left_container.rs  loading_bar.rs  main_body.rs  mod.rs  permissions.rs  popup_container.rs  request_indicator.rs  settings_panel.rs
src/infrastructure/cli/components/right_container/: file_changes.rs  todo_list.rs
src/infrastructure/cli/components/right_half_body/: container.rs  mod.rs  todo_list.rs
src/infrastructure/cli/helpers/: layout.rs  mod.rs  widgets.rs
src/infrastructure/cli/views/: main_view.rs
src/infrastructure/db/: migrations.rs  mod.rs
src/infrastructure/db/sql/: 00-initial-schema.sql  01-add-history-from-request-id.sql
src/infrastructure/inference/: local.rs  mod.rs  openai.rs
src/repository/: meta.rs  mod.rs  models.rs  projects.rs  session_request_steps.rs  session_requests.rs  sessions.rs  todo_lists.rs  user_settings.rs
src/utils/: mod.rs  paths.rs  permissions.rs  shortcuts.rs  ui.rs
src/utils/io/: file_operations.rs  mod.rs
src/utils/parsing/: heuristics.rs  mod.rs  parser.rs  tree_sitter.rs
