[package]
name = "drastis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drastis"
path = "src/main.rs"

[lib]
name = "drastis"
path = "src/lib.rs"

[dependencies]
llama-cpp-2 = "0.1"
num_cpus = "1.16"
clap = { version = "4", features = ["derive"] }
rustyline = "15"
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-md = "0.3"
regex = "1.10"
thiserror = "1.0"
ctrlc = "3.4"
walkdir = "2.5"
termtree = "0.5"
roxmltree = "0.20"
quick-xml = { version = "0.37", features = ["serialize"] }
openai_api_rust = "0.1.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3.0"
zenpatch = "0.1.0"

[dev-dependencies]

[patch.crates-io]
llama-cpp-2 = { path = ".cargo/patches/llama-cpp-2" }
