[package]
name = "quillcode"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "quillcode"
path = "src/main.rs"

[lib]
name = "quillcode"
path = "src/lib.rs"

[dependencies]
llama-cpp-2 = "0.1"
num_cpus = "1.16"
clap = { version = "4", features = ["derive"] }
rustyline = "15"
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-md = "0.3"
regex = "1.10"
thiserror = "1.0"
ctrlc = "3.4"
walkdir = "2.5"
termtree = "0.5"
roxmltree = "0.20"
quick-xml = { version = "0.37", features = ["serialize"] }
openai_api_rust = "0.1.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3.0"
zenpatch = "0.1.0"
colored = "3.1.1"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
ratatui = "0.24" # Locked for ratatui-textarea compatibility.
crossterm = "0.27"
ratatui-textarea = "0.4.1"
  openai-agents-tracing = { path = "crates/openai-agents-tracing-rust" }
  similar = "2.6"
  urlencoding = "2.1"
pulldown-cmark = "0.10"
unicode-width = "0.2"
arboard = "3.6"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
oauth2 = "4.4"
tiny_http = "0.12"
open = "5.0"
sha2 = "0.10"
url = "2.5"
rand = "0.8"
shell-words = "1.1.1"

[dev-dependencies]

[patch.crates-io]
llama-cpp-2 = { path = ".cargo/patches/llama-cpp-2" }
