[package]
name = "openai-agents-tracing"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of OpenAI Agents SDK tracing functionality"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
